--- a/signature-verifier/pom.xml
+++ b/signature-verifier/pom.xml
@@ -43,6 +43,7 @@
       <groupId>net.sourceforge.argparse4j</groupId>
       <artifactId>argparse4j</artifactId>
       <version>0.8.1</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 </project>
